fixed modal's text overflow on mobile

--- a/style.css
+++ b/style.css
@@ -375,7 +375,8 @@ i {
         height: 100%;
         left: 0;
         top: 0;
-        font-size: 1em;
+        font-size: .95em;
+        overflow-y: scroll;
     }
 
     .dice {
@@ -436,6 +437,11 @@ i {
         display: block;
         max-height: 120px;
         margin-top: 10px;
+    }
+
+    .modal-content {
+        font-size: .9em;
+        overflow-y: scroll;
     }
 
     .player-0-panel,
